# HelloWorldJuce

./: CMakeLists.txt
AudioPlugin/: CMakeLists.txt
ConsoleApp/: CMakeLists.txt  Main.cpp
GuiApp/: CMakeLists.txt  DataRace.cpp  DataRace.h  Main.cpp  MainComponent.cpp  MainComponent.h  bullshit.h
SystemLib/: Bus.cpp  CMakeLists.txt  Cycles.cpp  Cycles.h  LCD.cpp  LCD.h  W65C02.cpp  W65C02.h  vrEmuLcd.cpp  vrEmuLcd.h
VASM/: a.out  binary_to_decimal.asm  bullshit.asm  hello_world.asm  prime.asm
